--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-daisyui": "^3.0.3",
     "react-dom": "18.2.0",
+    "react-modern-drawer": "^1.2.0",
     "react-redux": "^8.0.5",
     "typescript": "5.0.2"
   },
