--- a/client/package.json
+++ b/client/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "1.9.3",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "daisyui": "^2.51.5",
+    "daisyui": "2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-daisyui": "^3.0.3",
+    "react-daisyui": "3.0.3",
     "react-dom": "18.2.0",
-    "react-modern-drawer": "^1.2.0",
-    "react-redux": "^8.0.5",
+    "react-modern-drawer": "1.2.0",
+    "react-redux": "8.0.5",
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.2.7"
   }
 }
