--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "daisyui": "2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "lint": "^1.1.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-daisyui": "3.0.3",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
+    "eslint-config-prettier": "8.8.0",
     "postcss": "8.4.21",
     "tailwindcss": "3.2.7"
   }
