--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ GOOGLE_CLIENT_ID="99232972648-g1gmifmotedteeig83pg32oo5c459o0b.apps.googleuserco
 GOOGLE_CLIENT_SECRET="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"
 NEXTAUTH_SECRET=mysecretodificildeadivinar
 NEXTAUTH_URL=http://localhost:3000
+SERVER_URL_BASE=http://localhost:5000
