--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "boxicons": "^2.1.4",
     "daisyui": "2.51.5",
     "eslint": "8.36.0",
