--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.13",
+    "@hookform/resolvers": "^3.0.1",
     "@reduxjs/toolkit": "1.9.3",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
@@ -25,9 +26,11 @@
     "react": "18.2.0",
     "react-daisyui": "3.0.3",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-modern-drawer": "1.2.0",
     "react-redux": "8.0.5",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
