--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
-    "boxicons": "^2.1.4",
     "daisyui": "2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -30,7 +29,7 @@
     "react-modern-drawer": "1.2.0",
     "react-redux": "8.0.5",
     "typescript": "5.0.2",
-    "yup": "^1.0.2"
+    "yup": "1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
