--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "1.7.13",
     "@hookform/resolvers": "^3.0.1",
     "@reduxjs/toolkit": "1.9.3",
+    "@splidejs/react-splide": "^0.7.12",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
