--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.43.9",
     "react-modern-drawer": "1.2.0",
     "react-redux": "8.0.5",
+    "react-select": "^5.7.2",
     "typescript": "5.0.2",
     "yup": "1.0.2"
   },
