--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-modern-drawer": "1.2.0",
     "react-redux": "8.0.5",
     "react-select": "^5.7.2",
+    "sonner": "^0.3.0",
     "typescript": "5.0.2",
     "yup": "1.0.2"
   },
